Changed title thing

--- a/paper.tex
+++ b/paper.tex
@@ -17,7 +17,7 @@
 \newcommand{\NH}{\text{NH}}
 \newcommand{\RG}{\text{RG}}
 
-\title{An Incomplete Overview of some Applications of Game Theory to Patient Flow}
+\title{An Incomplete Overview of Some Applications of Game Theory to Patient Flow}
 
 \begin{document}
 
