--- a/paper.tex
+++ b/paper.tex
@@ -62,14 +62,15 @@
 
 \begin{abstract}
 
-Individual behaviour has an effect on the optimal control of queueing systems.
-This idea sits at the intersection of queueing theory and game theory.
+Individual behaviour has an effect on the optimal control of queueing systems, which is an idea that sits at the intersection of queueing theory and game theory.
 The role of this paper is to discuss some work in this area applied to healthcare systems.
 
 One aspect considered is the effect of patient behaviour when choosing between service facilities.
 Various pieces of work will be discussed that have looked at this area.
 
 A second aspect is the effect that managers may have when acting rationally in their control of queueing systems.
+
+Thoughts for future directions of work are also considered.
 \end{abstract}
 
 \bigskip
@@ -155,7 +156,7 @@ The routing game used is shown in \ref{fig:routinggame}.
 \begin{center}
 \includegraphics[width=.7\textwidth]{./Images/Hospital_Routing_Game.pdf}
 \end{center}
-\caption{Routing game $m$ hospitals to $n$ services.}\label{fig:routinggame}
+\caption{Routing game: $m$ hospitals to $n$ services.}\label{fig:routinggame}
 \end{figure}
 
 The corresponding cost function for a given traffic flow $\lambda$ is given by:
