--- a/paper.tex
+++ b/paper.tex
@@ -187,7 +187,35 @@ The routing game used is shown in Figure \ref{fig:routinggame}.
 
 \begin{figure}[!hbtp]
 \begin{center}
-\includegraphics[width=.7\textwidth]{./Images/Hospital_Routing_Game.pdf}
+
+\begin{tikzpicture}
+\node (S1) at (0,0) [circle, draw=blue, fill=blue!5] {} node[left=.1cm] {$\Lambda_1$};
+\node (S2) at (0,-2) [circle, draw=blue, fill=blue!5] {} node at (S2)[left=.1cm] {$\Lambda_2$};
+\node (S3) at (0,-4)  {$\vdots$};
+\node (S4) at (0,-6) [circle, draw=blue, fill=blue!5] {} node at (S4) [left=.1cm] {$\Lambda_m$};
+
+\node (E) at (10,-3) [circle, draw=blue, fill=red!5] {};
+
+\node (F1) at (5,-1) [circle, draw=blue, fill=red!5] {};
+\node (F3) at (5,-3)  {$\vdots$};
+\node (F2) at (5,-5) [circle, draw=blue, fill=red!5] {};
+
+\draw [->, red] (F1) -- (E) node [midway, above, sloped, black] (TextNode) {$w_{1}$};
+\draw [->, red] (F2) -- (E) node [midway, above, sloped, black] (TextNode) {$w_{n}$};
+
+
+\draw [->, red] (S1) -- (F1) node [midway, above, sloped, black] (TextNode) {$d_{11}$};
+\draw [->, red] (S1) -- (F2) node [midway, above, sloped, black] (TextNode) {$d_{1n}$};
+\draw [->, red] (S2) -- (F1) node [midway, above, sloped, black] (TextNode) {$d_{21}$};
+\draw [->, red] (S2) -- (F2) node [near start, above, sloped, black] (TextNode) {$d_{2n}$};
+\draw [->, red] (S4) -- (F1) node [near start, above, sloped, black] (TextNode) {$d_{m1}$};
+\draw [->, red] (S4) -- (F2) node [midway, above, sloped, black] (TextNode) {$d_{mn}$};
+
+\draw [->, red] (S1) edge[out=45, in=135] node [above, black] {$\beta_1$} (E);
+\draw [->, red] (S4) edge[out=-45, in=-135] node [above, black] {$\beta_m$} (E);
+\draw [->, red] (S2) edge[out=100, in=135] node [above, black] {$\beta_2$} (E);
+
+\end{tikzpicture}
 \end{center}
 \caption{Routing game: $m$ hospitals to $n$ services.}\label{fig:routinggame}
 \end{figure}
