--- a/paper.tex
+++ b/paper.tex
@@ -23,12 +23,12 @@
 
 \maketitle
 
-\author{
-\name{Vincent Knight}
-\institute{Cardiff University}
-\iaddress{Cardiff, UK}
-\email{knightva@cf.ac.uk}
-}
+%\author{
+%\name{Vincent Knight}
+%\institute{Cardiff University}
+%\iaddress{Cardiff, UK}
+%\email{knightva@cf.ac.uk}
+%}
 
 %\author{
 %\name{Paul Harper}
