--- a/paper.tex
+++ b/paper.tex
@@ -23,40 +23,40 @@
 
 \maketitle
 
-%\author{
-%\name{Vincent Knight}
-%\institute{Cardiff University}
-%\iaddress{Cardiff, UK}
-%\email{knightva@cf.ac.uk}
-%}
+\author{
+\name{Vincent Knight}
+\institute{Cardiff University}
+\iaddress{Cardiff, UK}
+\email{knightva@cf.ac.uk}
+}
 
-%\author{
-%\name{Paul Harper}
-%\institute{Cardiff University}
-%\iaddress{Cardiff, UK}
-%\email{harper@cf.ac.uk}
-%}
-%
-%\author{
-%\name{Jeff Griffiths}
-%\institute{Cardiff University}
-%\iaddress{Cardiff, UK}
-%\email{griffiths@cf.ac.uk}
-%}
-%
-%\author{
-%\name{Izabela Komenda}
-%\institute{Cardiff University}
-%\iaddress{Cardiff, UK}
-%\email{komendai@cf.ac.uk}
-%}
-%
-%\author{
-%\name{Rob Shone}
-%\institute{Cardiff University}
-%\iaddress{Cardiff, UK}
-%\email{shoner@cf.ac.uk}
-%}
+\author{
+\name{Paul Harper}
+\institute{Cardiff University}
+\iaddress{Cardiff, UK}
+\email{harper@cf.ac.uk}
+}
+
+\author{
+\name{Jeff Griffiths}
+\institute{Cardiff University}
+\iaddress{Cardiff, UK}
+\email{griffiths@cf.ac.uk}
+}
+
+\author{
+\name{Izabela Komenda}
+\institute{Cardiff University}
+\iaddress{Cardiff, UK}
+\email{komendai@cf.ac.uk}
+}
+
+\author{
+\name{Rob Shone}
+\institute{Cardiff University}
+\iaddress{Cardiff, UK}
+\email{shoner@cf.ac.uk}
+}
 
 \vspace{8mm}
 
